font-display: swap; (ensure text visible during webfont load)

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,6 +5,7 @@
     url('fonts/roboto-thin-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
 }
 
 @font-face {
@@ -13,6 +14,7 @@
     url('fonts/roboto-light-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
 }
 
 @font-face {
@@ -21,6 +23,7 @@
     url('fonts/roboto-regular-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +32,7 @@
     url('fonts/roboto-medium-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
@@ -37,6 +41,7 @@
     url('fonts/roboto-bold-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
@@ -45,6 +50,7 @@
     url('fonts/roboto-black-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 900;
+  font-display: swap;
 }
 
 @font-face {
@@ -53,6 +59,7 @@
     url('fonts/spacemono-regular-webfont.woff') format('woff');
   font-style: normal;
   font-weight: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -61,6 +68,7 @@
     url('fonts/spacemono-bold-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
 
 body {
